--- a/build
+++ b/build
@@ -4,7 +4,8 @@ exit 1
 fi
 
 
- env GOOS=linux GOARCH=386 go build  
+# env GOOS=linux GOARCH=386 go build
+  CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build
 # env GOOS=linux GOARCH=arm GOARM=7 go build  
 # env GOOS=darwin GOARCH=386  go build  
 
